--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -1,17 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
 <script>
     function deleteTask(taskId) {
@@ -25,11 +13,33 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/9dfa6c6e5c.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <title>taskr</title>
 </head>
 <body>
 <div class="alert alert-info" role="alert">
-    <h3>taskr - Your tasks at the moment are : </h3>
+    <div style="display: flex">
+        <h3>taskr - hey, <span th:text="${userName}"></span>! your tasks at the moment are : </h3>
+        <form class="left" th:action="@{/saml/logout}" method="get" style="margin-left: auto; margin-right: 5px;">
+                <input class="btn btn-primary" type="submit" value="Global Logout"/>
+        </form>
+        <form class="left" th:action="@{/saml/logout}" method="get">
+            <input type="hidden" name="local" value="true"/>
+            <input class="btn btn-secondary" type="submit" value="Local Logout"/>
+        </form>
+    </div>
 </div>
 <button type="button" class="btn btn-primary" style="margin-left: 15px; margin-bottom: 15px;" data-toggle="modal"
         data-target="#addTask">Add task
@@ -39,7 +49,8 @@
         <div class="alert alert-warning" role="alert" style="margin-right: 30px;">
             <div style="display: flex; margin-left: auto;">
                 <b><span th:text="${task.creationDateTime}"></span></b>
-                <form action="#" th:action="@{/delete/} + ${task.id}" method="post" style="justify-content: flex-end; display: flex; margin-left: auto; margin-bottom: 10px;">
+                <form action="#" th:action="@{/delete/} + ${task.id}" method="post"
+                      style="justify-content: flex-end; display: flex; margin-left: auto; margin-bottom: 10px;">
                     <button type="submit" class="btn btn-danger">
                         &times;
                     </button>
