--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -14,7 +14,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <title>Error</title>
+    <title>taskr | Error</title>
 </head>
 <body>
 <div class="alert alert-info" role="alert">
