--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -26,18 +26,18 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <title>taskr</title>
+    <title>taskr | Tasks</title>
 </head>
 <body>
 <div class="alert alert-info" role="alert">
     <div style="display: flex">
         <h3>taskr - hey, <span th:text="${userName}"></span>! your tasks at the moment are : </h3>
         <form class="left" th:action="@{/saml/logout}" method="get" style="margin-left: auto; margin-right: 5px;">
-                <input class="btn btn-primary" type="submit" value="Global Logout"/>
+                <input class="btn btn-primary" type="submit" value="Global Logout" data-toggle="tooltip" data-placement="bottom" title="Log out from SSOCircle"/>
         </form>
         <form class="left" th:action="@{/saml/logout}" method="get">
             <input type="hidden" name="local" value="true"/>
-            <input class="btn btn-secondary" type="submit" value="Local Logout"/>
+            <input class="btn btn-secondary" type="submit" value="Local Logout" data-toggle="tooltip" data-placement="bottom" title="Log out from taskr"/>
         </form>
     </div>
 </div>
